istio/example/nginx-proxypass/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.8
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/logLevel: debug
  name: nginx-proxy
spec:
  selector:
    matchLabels:
      app: nginx-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: centos
        image: centos
        command: ["tail", "-f", "/dev/null"]
        ports:
        - containerPort: 80
