istio/example/nginx-proxypass/enable_access_log_json.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: enable-accesslog
  namespace: istio-debug
spec:
  workloadSelector:
    labels:
      app: nginx-proxy
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
              path: /dev/stdout
              format: "{\"authority\": \"%REQ(:AUTHORITY)%\",\"start_time\": \"%START_TIME%\",\"bytes_received\": \"%BYTES_RECEIVED%\",\"bytes_sent\": \"%BYTES_SENT%\",\"downstream_local_address\": \"%DOWNSTREAM_LOCAL_ADDRESS%\",\"downstream_remote_address\": \"%DOWNSTREAM_REMOTE_ADDRESS%\",\"duration\": \"%DURATION%\",\"istio_policy_status\": \"%DYNAMIC_METADATA(istio.mixer:status)%\",\"method\": \"%REQ(:METHOD)%\",\"path\": \"%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%\",\"protocol\": \"%PROTOCOL%\",\" [...]
