istio/example/nginx-proxypass/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
  labels:
    app: nginx
  name: nginx-proxy
spec:
  rules:
  - host: istio-debug.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-proxy-svc
          servicePort: 80
        path: /
